Code forces global round 14 so far (C/D wrong answers)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,7 @@ project(Codeforces)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Codeforces main.cpp)
+add_executable(14A GlobalRound14/ProblemA.cpp)
+add_executable(14B GlobalRound14/ProblemB.cpp)
+add_executable(14D GlobalRound14/ProblemD.cpp)
+add_executable(14C GlobalRound14/ProblemC.cpp)
