Code forces global round 14 -> C Correct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(14A GlobalRound14/ProblemA.cpp)
 add_executable(14B GlobalRound14/ProblemB.cpp)
 add_executable(14D GlobalRound14/ProblemD.cpp)
 add_executable(14C GlobalRound14/ProblemC.cpp)
+add_executable(14Cb GlobalRound14/ProblemCAlternate.cpp)
