--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,5 @@ add_executable(Duel4 Duels/Duel4.cpp)
 add_executable(Duel5 Duels/Duel5.cpp)
 
 add_executable(DivanAndAStore PracticeProblems/DivanAndAStore.cpp)
+add_executable(DivanAndANewProject PracticeProblems/DivanAndANewProject.cpp)
 
