--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,6 @@ add_executable(Duel5 Duels/Duel5.cpp)
 add_executable(DivanAndAStore PracticeProblems/DivanAndAStore.cpp)
 add_executable(DivanAndANewProject PracticeProblems/DivanAndANewProject.cpp)
 add_executable(DivanAndBitwiseOperations PracticeProblems/DivanAndBitwiseOperations.cpp)
+add_executable(PosionedDagger PracticeProblems/PoisonedDagger.cpp)
+add_executable(MEXSequences PracticeProblems/MEXSequences.cpp)
 
