Codeforces Educational Round 120 (2 solves, TLE on C, misread D)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,11 @@ add_executable(DivanAndANewProject PracticeProblems/DivanAndANewProject.cpp)
 add_executable(DivanAndBitwiseOperations PracticeProblems/DivanAndBitwiseOperations.cpp)
 add_executable(PosionedDagger PracticeProblems/PoisonedDagger.cpp)
 add_executable(MEXSequences PracticeProblems/MEXSequences.cpp)
+add_executable(NotQuiteLee PracticeProblems/NotQuiteLee.cpp)
 
+add_executable(120_A EducationalRound120_Div2/ProblemA.cpp)
+add_executable(120_B EducationalRound120_Div2/ProblemB.cpp)
+add_executable(120_C EducationalRound120_Div2/ProblemC.cpp)
+add_executable(120_D EducationalRound120_Div2/ProblemD.cpp)
+add_executable(120_E EducationalRound120_Div2/ProblemE.cpp)
+add_executable(120_F EducationalRound120_Div2/ProblemF.cpp)
